[package]
authors = ["Jonas Bushart"]
name = "serde_with_macros"

categories = ["encoding"]
description = "proc-macro library for serde_with"
documentation = "https://docs.rs/serde_with_macros/"
keywords = ["serde", "utilities", "serialization", "deserialization"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

include = [
    "src/**/*",
    "tests/**/*",
    # These tests are a bit more volatile as future compiler upgrade might break them
    "!tests/compile-fail/**",
    "LICENSE-*",
    "README.md",
    "CHANGELOG.md",
]

[lib]
proc-macro = true

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
expect-test.workspace = true
pretty_assertions.workspace = true
rustversion.workspace = true
serde.default-features = true
serde.workspace = true
serde_json.workspace = true
trybuild.workspace = true
version-sync.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
pre-release-replacements = [
    {file = "CHANGELOG.md", search = "\\[Unreleased\\]", replace = "[Unreleased]\n\n## [{{version}}] - {{date}}"},
    {file = "src/lib.rs", search = "https://docs\\.rs/serde_with/[\\d.]+/", replace = "https://docs.rs/serde_with/{{version}}/"},
    {file = "src/lib.rs", search = "https://docs\\.rs/serde_with_macros/[\\d.]+/", replace = "https://docs.rs/serde_with_macros/{{version}}/"},
]
tag = false
